Bienes raices - Estilos Header

--- a/biense raices/index.html
+++ b/biense raices/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
- 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/custom.css">
 	<title>Bines raices</title>
 </head>
 
 <body>
-	<header>
-		<a href="/">
-			<img src="img/logo.svg" alt="">
-		</a>
-
-		<nav>
-			<a href="/nosotros.html"> Nosotros </a>
-			<a href="/anuncios.html">Anuncios</a>
-			<a href="/blog">Blog</a>
-			<a href="/contacto">Contacto</a>
-		</nav>
-
-		<h1>Venta de casas y departamentoo Exclusivos de lujo</h1>
+	<header class="site-header inicio">
+		<div class="contenedor contenido-header">
+			<div class="barra">
+				<a href="/">
+					<img src="img/logo.svg" alt="">
+				</a>
+				<nav class="navegacion">
+					<a href="/nosotros.html"> Nosotros </a>
+					<a href="/anuncios.html">Anuncios</a>
+					<a href="/blog">Blog</a>
+					<a href="/contacto">Contacto</a>
+				</nav>
+			</div><!-- Contenedor -->
+			<h1>Venta de casas y departamentoo Exclusivos de lujo</h1>
+		</div>
 	</header>
 
 	<section>
@@ -40,7 +44,7 @@
 			<img src="img/icono2.svg" alt="icono mejor precio ">
 			<h3>El Mejor Precio</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aut quaerat voluptate eligendi
-			tempora
+				tempora
 				quidem? Minus quasi, officia earum, cum expedita quam porro quas aperiam dolor rerum deserunt
 				praesentium
 				consequuntur.</p>
@@ -123,7 +127,7 @@
 	</section>
 
 	<footer>
-		<nav>
+		<nav class="navegacion">
 			<a href="/nosotros.html"> Nosotros </a>
 			<a href="/anuncios.html">Anuncios</a>
 			<a href="/blog">Blog</a>
