Bienes raices - Seccion Nosotros

--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,35 +29,38 @@
 		</div>
 	</header>
 
-	<section>
-		<h2>Más sobre nosotros</h2>
+	<section class="contenedor seccion">
+		<h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
+		<div class="iconos-nosotros">
+			<div class="icono" >
+				<img src="img/icono1.svg" alt="">
+				<h3>Seguridad</h3>
+				<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Numquam vel accusamus, eaque alias
+					consequatur
+					velit
+					dolor eius ex sequi odit dolorum eveniet laborum nisi ducimus sit consequuntur incidunt quis
+					dignissimos?</p>
+			</div>
 
-		<div class="main-class">
-			<img src="img/icono1.svg" alt="">
-			<h3>Seguridad</h3>
-			<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Numquam vel accusamus, eaque alias consequatur
-				velit
-				dolor eius ex sequi odit dolorum eveniet laborum nisi ducimus sit consequuntur incidunt quis
-				dignissimos?</p>
-		</div>
-
-		<div>
-			<img src="img/icono2.svg" alt="icono mejor precio ">
-			<h3>El Mejor Precio</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aut quaerat voluptate eligendi
-				tempora
-				quidem? Minus quasi, officia earum, cum expedita quam porro quas aperiam dolor rerum deserunt
-				praesentium
-				consequuntur.</p>
-		</div>
-		<div>
-			<img src="img/icono3.svg" alt="Icono a tiempo">
-			<h3>A Tiempo</h3>
-			<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti laboriosam doloribus voluptates
-				architecto
-				quia, commodi at quo fuga expedita odit non aliquam accusantium sit, ullam dolores excepturi. Vel, sequi
-				culpa.
-			</p>
+			<div class="icono">
+				<img src="img/icono2.svg" alt="icono mejor precio ">
+				<h3>El Mejor Precio</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aut quaerat voluptate eligendi
+					tempora
+					quidem? Minus quasi, officia earum, cum expedita quam porro quas aperiam dolor rerum deserunt
+					praesentium
+					consequuntur.</p>
+			</div>
+			<div class="icono">
+				<img src="img/icono3.svg" alt="Icono a tiempo">
+				<h3>A Tiempo</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti laboriosam doloribus voluptates
+					architecto
+					quia, commodi at quo fuga expedita odit non aliquam accusantium sit, ullam dolores excepturi. Vel,
+					sequi
+					culpa.
+				</p>
+			</div>
 		</div>
 	</section>
 
