--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -32,7 +32,7 @@
 	<section class="contenedor seccion">
 		<h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
 		<div class="iconos-nosotros">
-			<div class="icono" >
+			<div class="icono">
 				<img src="img/icono1.svg" alt="">
 				<h3>Seguridad</h3>
 				<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Numquam vel accusamus, eaque alias
@@ -64,38 +64,93 @@
 		</div>
 	</section>
 
-	<main>
-		<h2>Casas y Depas en venta</h2>
-		<div>
-			<img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
-			<h3>Casas de lujo en el lago</h3>
-			<p>Casa en el lago con execelente vista, acabados de lujo a un excelente precio</p>
-			<p>$3,000,000</p>
-			<a href="#">Ver Propiedad </a>
-		</div>
+	<main class="seccion contenedor">
+		<h2 class="fw-300 centrar-texto">Casas y Depas en venta</h2>
 
-		<div>
-			<img src="img/anuncio2.jpg" alt="Anuncio casa en el lago">
-			<h3>Casas terminidados de lujo</h3>
-			<p>Casa con diseño moderno, asi como tecnologia inteligente y amueblada </p>
-			<p>$4,300,000</p>
-			<a href="#">Ver Propiedad </a>
-		</div>
+		<div class="contenedor-anuncios">
+			<div class="anuncio">
+				<img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casas de lujo en el lago</h3>
+					<p>Casa en el lago con execelente vista, acabados de lujo a un excelente precio</p>
+					<p class="precio">$3,000,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
 
-		<div>
-			<img src="img/anuncio3.jpg" alt="Anuncio casa en el lago">
-			<h3>Casa con alberca </h3>
-			<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
-			<p>$3,300,000</p>
-			<a href="#">Ver Propiedad </a>
+			<div class="anuncio">
+				<img src="img/anuncio2.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casas terminados de lujo</h3>
+					<p>Casa con diseño moderno, asi como tecnologia inteligente y amueblada </p>
+					<p class="precio">$4,300,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+
+			<div class="anuncio">
+				<img src="img/anuncio3.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casa con alberca </h3>
+					<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+					<p class="precio">$3,300,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
 		</div>
-		<a href="anuncios.html">Ver Todas</a>
+		<div class="ver-todas">
+			<a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
+		</div>
 	</main>
 
-	<section>
-		<h2>Encuentra la casa de tus sueños</h2>
-		<p>llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
-		<a href="contacto.html">Contactanos </a>
+	<section class="imagen-contacto">
+		<div class="contenedor contenido-contacto">
+			<h2>Encuentra la casa de tus sueños</h2>
+			<p>llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</p>
+			<a href="contacto.html" class="boton boton-amarillo">Contactanos </a>
+		</div>
 	</section>
 
 	<section>
