--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -153,38 +153,55 @@
 		</div>
 	</section>
 
-	<section>
-		<h3>Nuestro Blog</h3>
-		<article>
-			<img src="img/blog1.jpg" alt="Nuestro blog">
-			<h4>Terraza en el techo de tu casa </h4>
-			<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
-			<p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando
-				dinero
-			</p>
-		</article>
+	<div class="seccion-inferior contenedor seccion">
+		<section class="blog">
+			<h3 class="centrar-texto fw-300">Nuestro Blog</h3>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<img src="img/blog1.jpg" alt="Nuestro blog">
+				</div>
+				<div class="texto-entrada">
+					<a href="#">
+						<h4>Terraza en el techo de tu casa </h4>
+					</a>
+					<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
+					<p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y
+						ahorrando
+						dinero
+					</p>
+				</div>
+			</article>
 
-		<article>
-			<img src="img/blog2.jpg" alt="Anuncio casa en el lago">
-			<h4>Guia para la decoracion de tu hogar </h4>
-			<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
-			<p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a
-				tu
-				espacio
-			</p>
-		</article>
-	</section>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<img src="img/blog2.jpg" alt="Anuncio casa en el lago">
+				</div>
+				<div class="texto-entrada">
+					<a href="#">
+						<h4>Guia para la decoracion de tu hogar </h4>
+					</a>
+					<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
+					<p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle
+						vida a
+						tu
+						espacio
+					</p>
+				</div>
+			</article>
+		</section>
 
-	<section>
-		<h3>Testimoniales</h3>
-		<blockquote>
-			El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron
-			cumple
-			con todas mis expectativas.
-		</blockquote>
-		<p>- Germán David Muñoz</p>
-	</section>
-
+		<section class="testimoniales">
+			<h3 class="centrar-texto fw-300">Testimoniales</h3>
+			<div class="testimonial">
+				<blockquote>
+					El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron
+					cumple
+					con todas mis expectativas.
+				</blockquote>
+				<p>- Germán David Muñoz</p>
+			</div>
+		</section>
+	</div>
 	<footer>
 		<nav class="navegacion">
 			<a href="/nosotros.html"> Nosotros </a>
