--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -202,14 +202,16 @@
 			</div>
 		</section>
 	</div>
-	<footer>
-		<nav class="navegacion">
-			<a href="/nosotros.html"> Nosotros </a>
-			<a href="/anuncios.html">Anuncios</a>
-			<a href="/blog">Blog</a>
-			<a href="/contacto">Contacto</a>
-		</nav>
-		<p>Todos los derechos reservados 2020 &copy; </p>
+	<footer class="site-footer seccion">
+		<div class="contenedor contenedor-footer">
+			<nav class="navegacion">
+				<a href="/nosotros.html"> Nosotros </a>
+				<a href="/anuncios.html">Anuncios</a>
+				<a href="/blog">Blog</a>
+				<a href="/contacto">Contacto</a>
+			</nav>
+			<p class="copyright">Todos los derechos reservados 2020 &copy; </p>
+		</div>
 	</footer>
 </body>
 
