--- a/bienes raices/nosotros.html
+++ b/bienes raices/nosotros.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/custom.css">
+	<title>Bines raices</title>
 </head>
+
 <body>
-	<h1>Nosotros</h1>
-	<a href="index.html">Volver</a>
+	<header class="site-header">
+		<div class="contenedor contenido-header">
+			<div class="barra">
+				<a href="/">
+					<img src="img/logo.svg" alt="">
+				</a>
+				<nav class="navegacion">
+					<a href="/nosotros.html"> Nosotros </a>
+					<a href="/anuncios.html">Anuncios</a>
+					<a href="/blog">Blog</a>
+					<a href="/contacto">Contacto</a>
+				</nav>
+			</div><!-- Contenedor -->
+			<h1>Venta de casas y departamentoo Exclusivos de lujo</h1>
+		</div>
+	</header>
+
+	<main class="contenedor">
+		<h1 class="fw-300 centrar-texto">Conoce Sobre Nosotros</h1>
+		
+		<div class="contedor-nosotros">
+			<div class="imagen">
+				<img src="img/nosotros.jpg" alt="nosotros">
+			</div>
+			<div class="texto-nosotros">
+				<blockquote>25 Años De Experiencia</blockquote>
+				
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae dicta explicabo itaque distinctio culpa corporis amet laboriosam saepe iusto voluptate placeat, animi assumenda ipsum impedit deserunt tenetur commodi excepturi id!</p>
+				<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi praesentium odio temporibus minima neque expedita consequatur autem officiis a, delectus doloribus eveniet numquam at, ullam totam fuga adipisci et odit! Repudiandae eveniet, ducimus odit autem nihil repellendus ipsa hic nobis quisquam porro nemo beatae iste expedita placeat iure debitis, architecto a. Deserunt earum omnis, minus corporis rerum modi culpa nisi sapiente dolorum dolor, alias nostrum. Cumque nesciunt vero necessitatibus, reiciendis unde numquam aperiam suscipit? Porro, veniam exercitationem ab eos dolorum aut corporis quos sit adipisci blanditiis saepe iure autem dolor in eaque debitis esse vitae nulla tenetur? Aliquid, ad facere. </p>
+
+			</div>
+		</div>
+	</main>
+
+	<section class="contenedor seccion">
+		<h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
+		<div class="iconos-nosotros">
+			<div class="icono">
+				<img src="img/icono1.svg" alt="">
+				<h3>Seguridad</h3>
+				<p>orem ipsum, dolor sit amet consectetur adipisicing elit. Numquam vel accusamus, eaque alias
+					consequatur
+					velit
+					dolor eius ex sequi odit dolorum eveniet laborum nisi ducimus sit consequuntur incidunt quis
+					dignissimos?</p>
+			</div>
+
+			<div class="icono">
+				<img src="img/icono2.svg" alt="icono mejor precio ">
+				<h3>El Mejor Precio</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aut quaerat voluptate eligendi
+					tempora
+					quidem? Minus quasi, officia earum, cum expedita quam porro quas aperiam dolor rerum deserunt
+					praesentium
+					consequuntur.</p>
+			</div>
+			<div class="icono">
+				<img src="img/icono3.svg" alt="Icono a tiempo">
+				<h3>A Tiempo</h3>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti laboriosam doloribus voluptates
+					architecto
+					quia, commodi at quo fuga expedita odit non aliquam accusantium sit, ullam dolores excepturi. Vel,
+					sequi
+					culpa.
+				</p>
+			</div>
+		</div>
+	</section>
+
+	<footer class="site-footer seccion">
+		<div class="contenedor contenedor-footer">
+			<nav class="navegacion">
+				<a href="/nosotros.html"> Nosotros </a>
+				<a href="/anuncios.html">Anuncios</a>
+				<a href="/blog">Blog</a>
+				<a href="/contacto">Contacto</a>
+			</nav>
+			<p class="copyright">Todos los derechos reservados 2020 &copy; </p>
+		</div>
+	</footer>
 </body>
+
 </html>
