bienes raices - avanzando estilos

--- a/bienes raices/nosotros.html
+++ b/bienes raices/nosotros.html
@@ -32,7 +32,7 @@
 	<main class="contenedor">
 		<h1 class="fw-300 centrar-texto">Conoce Sobre Nosotros</h1>
 		
-		<div class="contedor-nosotros">
+		<div class="contenido-nosotros">
 			<div class="imagen">
 				<img src="img/nosotros.jpg" alt="nosotros">
 			</div>
