--- a/bienes raices/anuncios.html
+++ b/bienes raices/anuncios.html
@@ -1,12 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/custom.css">
+	<title>Bines raices</title>
 </head>
+
 <body>
-	<h1>Anuncios</h1>
-	<a href="index.html">Volver</a>
+	<header class="site-header">
+		<div class="contenedor contenido-header">
+			<div class="barra">
+				<a href="/">
+					<img src="img/logo.svg" alt="">
+				</a>
+				<nav class="navegacion">
+					<a href="/nosotros.html"> Nosotros </a>
+					<a href="/anuncios.html">Anuncios</a>
+					<a href="/blog">Blog</a>
+					<a href="/contacto">Contacto</a>
+				</nav>
+			</div><!-- Contenedor -->
+			<h1>Venta de casas y departamentoo Exclusivos de lujo</h1>
+		</div>
+	</header>
+
+	
+
+	<main class="seccion contenedor">
+		<h2 class="fw-300 centrar-texto">Casas y Depas en venta</h2>
+
+		<div class="contenedor-anuncios">
+			<div class="anuncio">
+				<img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casas de lujo en el lago</h3>
+					<p>Casa en el lago con execelente vista, acabados de lujo a un excelente precio</p>
+					<p class="precio">$3,000,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+
+			<div class="anuncio">
+				<img src="img/anuncio2.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casas terminados de lujo</h3>
+					<p>Casa con diseño moderno, asi como tecnologia inteligente y amueblada </p>
+					<p class="precio">$4,300,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+
+			<div class="anuncio">
+				<img src="img/anuncio3.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casa con alberca </h3>
+					<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+					<p class="precio">$3,300,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+
+			<div class="anuncio">
+				<img src="img/anuncio4.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casa con alberca </h3>
+					<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+					<p class="precio">$3,700,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>2</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>4</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>3</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+
+			<div class="anuncio">
+				<img src="img/anuncio5.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casa con alberca </h3>
+					<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+					<p class="precio">$3,100,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+			<div class="anuncio">
+				<img src="img/anuncio6.jpg" alt="Anuncio casa en el lago">
+				<div class="contenido-anuncio">
+					<h3>Casa con alberca </h3>
+					<p> Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+					<p class="precio">$3,500,000</p>
+					<ul class="iconos-caracteristicas">
+						<li>
+							<img src="img/icono_wc.svg" alt="icono wc">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_estacionamiento.svg" alt="icono estacionamiento">
+							<p>3</p>
+						</li>
+						<li>
+							<img src="img/icono_dormitorio.svg" alt="icono dormitorio">
+							<p>4</p>
+						</li>
+					</ul>
+					<a href="#" class="boton boton-amarillo d-block">Ver Propiedad </a>
+				</div>
+			</div>
+		</div><!--Anuncio -->
+	</main>
+
+	<footer class="site-footer seccion">
+		<div class="contenedor contenedor-footer">
+			<nav class="navegacion">
+				<a href="/nosotros.html"> Nosotros </a>
+				<a href="/anuncios.html">Anuncios</a>
+				<a href="/blog">Blog</a>
+				<a href="/contacto">Contacto</a>
+			</nav>
+			<p class="copyright">Todos los derechos reservados 2020 &copy; </p>
+		</div>
+	</footer>
 </body>
+
 </html>
