--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -21,8 +21,8 @@
 				<nav class="navegacion">
 					<a href="/nosotros.html"> Nosotros </a>
 					<a href="/anuncios.html">Anuncios</a>
-					<a href="/blog">Blog</a>
-					<a href="/contacto">Contacto</a>
+					<a href="/blog.html">Blog</a>
+					<a href="/contacto.html">Contacto</a>
 				</nav>
 			</div><!-- Contenedor -->
 			<h1>Venta de casas y departamentoo Exclusivos de lujo</h1>
