Entrada bienes raices

--- a/bienes raices/index.html
+++ b/bienes raices/index.html
@@ -161,7 +161,7 @@
 					<img src="img/blog1.jpg" alt="Nuestro blog">
 				</div>
 				<div class="texto-entrada">
-					<a href="#">
+					<a href="/entrada.html">
 						<h4>Terraza en el techo de tu casa </h4>
 					</a>
 					<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
@@ -177,7 +177,7 @@
 					<img src="img/blog2.jpg" alt="Anuncio casa en el lago">
 				</div>
 				<div class="texto-entrada">
-					<a href="#">
+					<a href="/entrada.html">
 						<h4>Guia para la decoracion de tu hogar </h4>
 					</a>
 					<p>Escrito el : <em> 29/11/2020 </em> por: <em>admin</em></p>
