--- a/blog cafe/index.html
+++ b/blog cafe/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=PT+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=PT+Sans&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<title>Document</title>
 </head>
+
 <body>
 	<header class="site-header">
 		<div class="contenedor">
 			<div class="barra">
 				<a href="/">
-					<h1 class="no-margin" >Blog <span>DeCafe</span></h1>
+					<h1 class="no-margin">Blog <span>DeCafe</span></h1>
 				</a>
 				<nav class="navegacion">
 					<a href="nosotros.html">Nosotros</a>
@@ -23,11 +26,89 @@
 				</nav>
 			</div><!-- barra -->
 			<div class="texto-header">
-				<h2 class="no-margin" >Blog de Café con consejos y cursos</h2>
-				<p class="no-margin" >Aprende de los expertos con las mejores recetas y concejos</p>
+				<h2 class="no-margin">Blog de Café con consejos y cursos</h2>
+				<p class="no-margin">Aprende de los expertos con las mejores recetas y concejos</p>
 			</div>
 		</div><!-- Contenedor -->
 	</header>
-	
+
+	<div class="contenido-pincipal contenedor">
+		<main class="blog">
+			<h2>Nuestro Blog</h2>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<img src="img/blog1.jpg" alt="Imagen Blog" srcset="">
+				</div>
+				<div class="contenido-blog">
+					<h3  class="no-margin" >Tres Deliciosas Receta Para Cafe</h3>
+					<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi in soluta explicabo reprehenderit
+						id dolor debitis est similique esse officia officiis sunt ea consectetur qui quod mollitia, rem
+						perferendis omnis voluptatum hic laboriosam veniam nostrum. At asperiores, saepe optio assumenda
+						voluptates, illum, id corporis accusantium nemo dolor alias totam placeat. </p>
+					<a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+				</div>
+			</article>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<img src="img/blog1.jpg" alt="Imagen Blog" srcset="">
+				</div>
+				<div class="contenido-blog">
+					<h3  class="no-margin">Beneficios Para Café </h3>
+					<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi in soluta explicabo reprehenderit
+						id dolor debitis est similique esse officia officiis sunt ea consectetur qui quod mollitia, rem
+						perferendis omnis voluptatum hic laboriosam veniam nostrum. At asperiores, saepe optio assumenda
+						voluptates, illum, id corporis accusantium nemo dolor alias totam placeat. </p>
+					<a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+				</div>
+			</article>
+			<article class="entrada-blog">
+				<div class="imagen">
+					<img src="img/blog1.jpg" alt="Imagen Blog" srcset="">
+				</div>
+				<div class="contenido-blog">
+					<h3 class="no-margin">Tipos De Granos De Café</h3>
+					<p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi in soluta explicabo reprehenderit
+						id dolor debitis est similique esse officia officiis sunt ea consectetur qui quod mollitia, rem
+						perferendis omnis voluptatum hic laboriosam veniam nostrum. At asperiores, saepe optio assumenda
+						voluptates, illum, id corporis accusantium nemo dolor alias totam placeat. </p>
+					<a href="entrada.html" class="btn btn-primario">Leer Entrada</a>
+				</div>
+			</article>
+
+		</main>
+		<aside class="cursos">
+			<h2>Nuestros Cursos y Talleres</h2>
+			<ul class="cursos-lista"> 
+				<li class="curso">
+					<h4 class="no-margin" >Técnicas De Extracción De Café</h4>
+					<p class="no-margin" >Precio: <span>Gratis</span> </p>
+					<p class="no-margin">cupo: <span>20</span> </p>
+					<a href="cursos.html" class="btn btn-secundario"> Más Información </a>
+				</li>
+				<li class="curso">
+					<h4 class="no-margin" >4 Recetas De Café Gratis</h4>
+					<p class="no-margin" >Precio: <span>Gratis</span> </p>
+					<p class="no-margin">cupo: <span>20</span> </p>
+					<a href="cursos.html" class="btn btn-secundario"> Más Información </a>
+				</li>
+			</ul>
+		</aside>
+	</div><!-- Contenido principal -->
+
+	<footer>
+		<div class="site-footer">
+			<div class="contenedor">
+				<div class="barra">
+					<p class="no-margin" >Blog <span>DeCafé</span></p>
+
+					<nav class="navegacion">
+						<a href="nosotros.html">Nosotros</a>
+						<a href="cursos.html">Cursos</a>
+						<a href="contacto.html">Contacto</a>
+					</nav>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
